--- a/win32/solution/ZNC_Modules.vcxproj
+++ b/win32/solution/ZNC_Modules.vcxproj
@@ -70,20 +70,20 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\$(Platform)-$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\build\temp\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
-    <NMakeBuildCommandLine>nmake -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
-    <NMakeReBuildCommandLine>nmake -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>nmake -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
+    <NMakeBuildCommandLine>nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
+    <NMakeReBuildCommandLine>nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
+    <NMakeCleanCommandLine>nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
     <NMakeIncludeSearchPath>..\..\include;..\platform</NMakeIncludeSearchPath>
     <NMakeForcedIncludes>target_winver.h;znc_msvc.h</NMakeForcedIncludes>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <NMakeBuildCommandLine>call "$(VCInstallDir)\vcvarsall.bat" amd64
-nmake -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
+nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>call "$(VCInstallDir)\vcvarsall.bat" amd64
-nmake -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
+nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>call "$(VCInstallDir)\vcvarsall.bat" amd64
-nmake -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
+nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
     <OutDir>$(SolutionDir)..\build\$(Platform)-$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\build\temp\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <NMakeIncludeSearchPath>..\..\include;..\platform</NMakeIncludeSearchPath>
@@ -93,20 +93,20 @@ nmake -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandL
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)..\build\$(Platform)-$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\build\temp\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
-    <NMakeBuildCommandLine>nmake -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
-    <NMakeReBuildCommandLine>nmake -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>nmake -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
+    <NMakeBuildCommandLine>nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
+    <NMakeReBuildCommandLine>nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
+    <NMakeCleanCommandLine>nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
     <NMakeIncludeSearchPath>..\..\include;..\platform</NMakeIncludeSearchPath>
     <NMakeForcedIncludes>target_winver.h;znc_msvc.h</NMakeForcedIncludes>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <NMakeBuildCommandLine>call "$(VCInstallDir)\vcvarsall.bat" amd64
-nmake -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
+nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) build</NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>call "$(VCInstallDir)\vcvarsall.bat" amd64
-nmake -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
+nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) rebuild</NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>call "$(VCInstallDir)\vcvarsall.bat" amd64
-nmake -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
+nmake /nologo -f Modules.make CFG=$(Platform)-$(Configuration) clean</NMakeCleanCommandLine>
     <OutDir>$(SolutionDir)..\build\$(Platform)-$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\build\temp\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <NMakeIncludeSearchPath>..\..\include;..\platform</NMakeIncludeSearchPath>
