--- a/win32/solution/ZNC.vcxproj
+++ b/win32/solution/ZNC.vcxproj
@@ -97,9 +97,9 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;_DEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;HAVE_LIBSSL;_DEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../../include;../platform</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../include;../platform;../dependencies/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>target_winver.h; znc_msvc.h</ForcedIncludeFiles>
       <MinimalRebuild>true</MinimalRebuild>
     </ClCompile>
@@ -107,7 +107,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>kernel32.lib;user32.lib;advapi32.lib;shell32.lib;shlwapi.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\dependencies\lib_x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\dependencies\lib_x86</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -116,16 +116,16 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;_DEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;HAVE_LIBSSL;_DEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../../include;../platform</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../include;../platform;../dependencies/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>target_winver.h; znc_msvc.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>kernel32.lib;user32.lib;advapi32.lib;shell32.lib;shlwapi.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\dependencies\lib_x64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\dependencies\lib_x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,10 +136,10 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;NDEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;HAVE_LIBSSL;NDEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <StringPooling>true</StringPooling>
-      <AdditionalIncludeDirectories>../../include;../platform</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../include;../platform;../dependencies/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>target_winver.h; znc_msvc.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
@@ -148,7 +148,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>kernel32.lib;user32.lib;advapi32.lib;shell32.lib;shlwapi.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\dependencies\lib_x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\dependencies\lib_x86</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -159,10 +159,10 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;NDEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;EXPORTS_GETOPT;HAVE_LIBSSL;NDEBUG;_WINDOWS;_USRDLL;ZNC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <StringPooling>true</StringPooling>
-      <AdditionalIncludeDirectories>../../include;../platform</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../include;../platform;../dependencies/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>target_winver.h; znc_msvc.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
@@ -171,7 +171,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>kernel32.lib;user32.lib;advapi32.lib;shell32.lib;shlwapi.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\dependencies\lib_x64</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\dependencies\lib_x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
